--- a/packt/tsconfig.base.json
+++ b/packt/tsconfig.base.json
@@ -16,6 +16,7 @@
     "baseUrl": ".",
     "paths": {
       "@packt/admin": ["admin/src/index.ts"],
+      "@packt/poi": ["poi/src/index.ts"],
       "@packt/visitor": ["visitor/src/index.ts"]
     }
   },
