--- a/packt/package.json
+++ b/packt/package.json
@@ -15,6 +15,11 @@
     "@angular/platform-browser": "~17.0.0",
     "@angular/platform-browser-dynamic": "~17.0.0",
     "@angular/router": "~17.0.0",
+    "@ngrx/component-store": "~17.0.0",
+    "@ngrx/effects": "~17.0.0",
+    "@ngrx/entity": "~17.0.0",
+    "@ngrx/router-store": "~17.0.0",
+    "@ngrx/store": "~17.0.0",
     "@nx/angular": "17.2.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -30,6 +35,8 @@
     "@angular/cli": "~17.0.0",
     "@angular/compiler-cli": "~17.0.0",
     "@angular/language-service": "~17.0.0",
+    "@ngrx/schematics": "~17.0.0",
+    "@ngrx/store-devtools": "~17.0.0",
     "@nx/eslint": "17.2.7",
     "@nx/eslint-plugin": "17.2.7",
     "@nx/jest": "17.2.7",
@@ -44,6 +51,7 @@
     "@typescript-eslint/parser": "^6.9.1",
     "eslint": "~8.48.0",
     "eslint-config-prettier": "^9.0.0",
+    "jasmine-marbles": "~0.9.1",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-preset-angular": "~13.1.4",
